Make bottom search tight with this horrible hack

--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
@@ -1,5 +1,7 @@
 .efa__search {
   background: @efa-blue;
+  // Overwrite value from correctiv.org that gives last-child of main padding
+  padding-bottom: 0px !important;
 }
 
 .efa__search__title {
