Render address details for zerodocs

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -4,6 +4,8 @@
 {% load number_utils %}
 
 {% block header_content %}
+  {{ block.super }}
+
   <ul class="efa__header__credentials">
     {% for year in zerodoc.get_confirmed_efpia_years %}
       <li class="efa__header__credentials-item">
