--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
@@ -112,6 +112,11 @@
     left: 85%;
     bottom: 0;
   }
+
+}
+
+.efa__search__form.-zerodoc:after {
+  background-image: none;
 }
 
 .efa__search__form--pharma {
