--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_zero_euro.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_zero_euro.html
@@ -10,5 +10,6 @@
 <p>
   <a class="efa__button--primary" href="{% url 'eurosfueraerzte:eurosfueraerzte-zerodocs_index' %}">{% trans "Register" %}</a>
   <a class="efa__button" href="{% trans "https://correctiv.org/a/1739" %}">{% trans "background article" %}</a>
+  <a class="efa__button" href="{% url 'eurosfueraerzte:eurosfueraerzte-zerodocs_map' %}">{% trans "map" %}</a>
 </p>
 </div>
