Add zero euro doc hints on all lang pages

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_zero_euro.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_zero_euro.html
@@ -8,7 +8,7 @@
   {% endblocktrans %}
 </p>
 <p>
-  <a class="efa__button--primary" href="{% url 'eurosfueraerzte:eurosfueraerzte-zerodocs_index' %}">{% trans "Register" %}</a>
+  <a class="efa__button--primary" href="{% url 'eurosfueraerzte:eurosfueraerzte-zerodocs_index' %}?country=at">{% trans "Register" %}</a>
   <a class="efa__button" href="{% trans "https://correctiv.org/a/1739" %}">{% trans "background article" %}</a>
   <a class="efa__button" href="{% url 'eurosfueraerzte:eurosfueraerzte-zerodocs_map' %}">{% trans "map" %}</a>
 </p>
