Adjust CH copy for update

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
@@ -54,7 +54,7 @@
           <div class="checkbox">
             <label>
               {{ recipient_form.zeroeuro }}
-              {% trans "Show only Zero Euro Docs" %}
+              {{ zeroeuro_form_label }}
             </label>
           </div>
         </div>
