--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_about_blurb.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <p>
-  {% trans "59 pharma companies in Switzerland published their payments to doctors and other health care professionals and organisations from the last year." %}
+  {% trans "Every year since 2016, pharma companies in Switzerland publish their payments to doctors and other health care professionals and organisations." context "CH" %}
 </p>
 <a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
   {% trans "Read the article" %}
