--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_main.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_main.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "Only around a quarter of doctors and health care professionals agreed to the publication of their fees and conference and travel expenses." context "CH" %}
+  {% trans "Doctors and other health care professionals have to agree to the publication of their fees and conference and travel expenses." context "CH" %}
 </p>
 <p>
   {% trans "Payments to individual doctors related to studies and non-interventional studies are generally not published by the pharma companies." context "CH" %}
