--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_index_blurb.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "59 pharma companies in Switzerland published their payments to doctors and other health care professionals and organisations from the last year." %}
+  {% trans "Pharma companies in Switzerland publish their payments to doctors and other health care professionals and organisations from the last year." %}
 </p>
 <p>
   <a href="/recherchen/euros-fuer-aerzte/artikel/2016/08/18/franken-fuer-aerzte/">{% trans "Read the background article" %}</a>
