--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_search_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_search_blurb.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 {% blocktrans with country_label=country_label_choice %}
-  How much money has your doctor received from the pharma industry <strong>in {{ country_label }}</strong> in 2015?
+  How much money has your doctor received from the pharma industry <strong>in {{ country_label }}</strong>?
 {% endblocktrans %}
