Update CH article links

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_article_link.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_article_link.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
-<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/08/18/franken-fuer-aerzte/">
+<a class="efa__header__more-link" href="https://correctiv.org/a/1910">
   {% trans "Read article" %}
 </a>
