--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_index_blurb.html
@@ -3,5 +3,5 @@
   {% trans "Pharma companies in Switzerland publish their payments to doctors and other health care professionals and organisations from the last year." %}
 </p>
 <p>
-  <a href="/recherchen/euros-fuer-aerzte/artikel/2016/08/18/franken-fuer-aerzte/">{% trans "Read the background article" %}</a>
+  <a href="https://correctiv.org/a/1910">{% trans "Read the background article" %}</a>
 </p>
