--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_about_blurb.html
@@ -3,6 +3,6 @@
 <p>
   {% trans "Every year since 2016, pharma companies in Switzerland publish their payments to doctors and other health care professionals and organisations." context "CH" %}
 </p>
-<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
+<a class="efa__header__more-link" href="https://correctiv.org/a/1910">
   {% trans "Read the article" %}
 </a>
