--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -29,6 +29,9 @@
 
   {% addtoblock "css" %}
     <link rel="stylesheet" href="{% static "eurosfueraerzte/css/eurosfueraerzte.css" %}" media="screen" charset="utf-8">
+  {% endaddtoblock %}
+
+  {% addtoblock "css" %}
     <link rel="stylesheet" href="{% static "eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css" %}" media="screen" charset="utf-8">
   {% endaddtoblock %}
 
